--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Gallery - Beautiful Moments</title>
+    <title>AI Image Gallery</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,8 +13,8 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <h1 class="logo">📸 Image Gallery</h1>
-            <p class="subtitle">Your Beautiful Moments Collection</p>
+            <h1 class="logo">Andi's AI Image Gallery</h1>
+            <p class="subtitle">Displays all the AI images created at <a href="https://image.andierni.ch" target="_blank" rel="noopener" style="color: #fff; text-decoration: underline;">https://image.andierni.ch</a></p>
         </div>
     </header>
 
